--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -95,6 +95,13 @@ body {
 	box-shadow: 3px 3px 5px  rgba(0, 0, 0, .5);
 	border-radius: 2px;
 }
+
+.loader {
+	margin: auto;
+	height: 100%;
+	width: 100%;
+	text-align: center;
+}
 nav {
 	margin-left: 10vw;
 	margin-right: 10vw;
@@ -237,6 +244,10 @@ nav {
 	}
 }
 
+a {
+	color: black;
+}
+
 h1, h2, h3, h5, h6 {
   color:black;
 }
@@ -253,3 +264,5 @@ h2 {
 h3 {
   font-size: $base-font-size + 0.125;
 }
+
+
